<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_chat_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/chat_view_margintop"
        android:text="@string/chat_view_active_conversation"
        android:textColor="@color/view_text_black"
        android:textSize="@dimen/font_header" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/chat_view_listview_height"
        android:baselineAligned="false"
        android:orientation="horizontal">


        <ListView
            android:id="@+id/lv_chat_sent"
            android:layout_width="@dimen/chat_view_lv_width"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/chat_view_lv_margintop"
            android:divider="@android:color/transparent"
            android:dividerHeight="@dimen/chat_view_dividerheight" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/chat_view_chat_linear_padding">

        <EditText
            android:id="@+id/et_chat_message"
            android:layout_width="@dimen/chat_view_et_width"
            android:layout_height="@dimen/chat_view_et_height"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/chat_view_et_message"
            android:imeOptions="actionSend"
            android:inputType="textMultiLine"
            android:maxLines="5" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_design"
            android:text="@string/chat_view_btn_send"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>